--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <img src="Images/loader.svg" alt="Loading" />
     </div>
     <!--  end Loader  -->
+    <!-- Navigation -->
     <header class="header" id="header">
       <div class="navigation">
         <ul>
@@ -55,6 +56,13 @@
         </ul>
       </div>
     </header>
+    <!-- end Navigation -->
+    <!-- Menu Bars -->
+    <div class="menu-bars" id="menu-bars">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
 
     <!-- Script connection -->
     <script src="js/script.js"></script>
