--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <!--  end Loader  -->
     <!-- Navigation -->
-    <header class="header" id="header">
-      <div class="navigation">
+    <header id="header">
+      <nav class="navigation" id="navigation" style="display: none">
         <ul>
           <li class="list active">
             <a href="#">
@@ -54,7 +54,7 @@
             </a>
           </li>
         </ul>
-      </div>
+      </nav>
     </header>
     <!-- end Navigation -->
     <!-- Menu Bars -->
@@ -65,6 +65,8 @@
     </div>
 
     <!-- Script connection -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+
     <script src="js/script.js"></script>
   </body>
 </html>
