--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--  end Loader  -->
     <!-- Navigation -->
     <header id="header">
-      <nav class="navigation" id="navigation" style="display: none">
+      <nav class="navigation" id="navigation">
         <ul>
           <li class="list active">
             <a href="#">
