--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> picture in picture </title>
+    <title> Ahmed Roshdy </title>
     <link href="vendor//bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="vendor//fontawesome-free/css/all.min.css" rel="stylesheet" />
     <!-- BoxIcons -->
@@ -21,7 +21,9 @@
     <!--  end Loader  -->
     <!-- Navigation -->
     <header id="header">
-      <nav class="navigation" id="navigation">
+      <!-- Menu Bars -->
+
+      <nav id="navigation" class="navigation">
         <ul>
           <li class="list active">
             <a href="#">
@@ -57,7 +59,6 @@
       </nav>
     </header>
     <!-- end Navigation -->
-    <!-- Menu Bars -->
     <div class="menu-bars" id="menu-bars">
       <div class="bar1"></div>
       <div class="bar2"></div>
