--- a/index.html
+++ b/index.html
@@ -21,36 +21,34 @@
     <!--  end Loader  -->
     <!-- Navigation -->
     <header id="header">
-      <!-- Menu Bars -->
-
       <nav id="navigation" class="navigation">
-        <ul>
+        <ul id="menu">
           <li class="list active">
-            <a href="#">
+            <a href="#home">
               <span class="icon"><i class="bx bxs-home"></i></span>
               <span class="title">Home</span>
             </a>
           </li>
           <li class="list">
-            <a href="#">
+            <a href="#education">
               <span class="icon"><i class="bx bxs-user"></i></span>
               <span class="list">Education</span>
             </a>
           </li>
           <li class="list">
-            <a href="#">
+            <a href="#projects">
               <span class="icon"><i class="bx bxs-zap"></i></span>
               <span class="title">Projects</span>
             </a>
           </li>
           <li class="list">
-            <a href="#">
+            <a href="#skills">
               <span class="icon"><i class="bx bx-code"></i></span>
               <span class="title">Skills</span>
             </a>
           </li>
           <li class="list">
-            <a href="#">
+            <a href="#contact">
               <span class="icon"><i class="bx bxs-envelope"></i></span>
               <span class="title">contact</span>
             </a>
@@ -59,15 +57,35 @@
       </nav>
     </header>
     <!-- end Navigation -->
+    <!-- Menu Bars -->
     <div class="menu-bars" id="menu-bars">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
     </div>
+    <!-- end Menu Bars -->
+    <!-- Start Sections -->
+    <section class="home" id="home">
+      <h1>Home</h1>
+    </section>
+    <section class="education" id="education">
+      <h1>Education</h1>
+    </section>
+    <section class="projects" id="projects">
+      <h1>Projects</h1>
+    </section>
+    <section class="skills" id="skills">
+      <h1>Skills</h1>
+    </section>
+    <section class="contact" id="contact">
+      <h1>Contact</h1>
+    </section>
+    <!-- End Sections -->
 
     <!-- Script connection -->
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="js/vendor.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
