--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li class="list">
             <a href="#contact">
               <span class="icon"><i class="bx bxs-envelope"></i></span>
-              <span class="title">contact</span>
+              <span class="title">Contact</span>
             </a>
           </li>
         </ul>
@@ -66,7 +66,7 @@
     <!-- end Menu Bars -->
     <!-- Start Sections -->
     <section class="home" id="home">
-      <h1>Home</h1>
+      <div><h1>Home</h1></div>
     </section>
     <section class="education" id="education">
       <h1>Education</h1>
