add assets files

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Ahmed Roshdy </title>
-    <link href="vendor//bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="vendor//fontawesome-free/css/all.min.css" rel="stylesheet" />
-    <!-- BoxIcons -->
-    <link href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" rel="stylesheet" />
-
     <link rel="icon" href="Images/icon.png" />
+    <!-- Vendor Styles [Bootstrap - Boxicons - Venobox - AOS] -->
+    <link rel="stylesheet" href="assets/css/all.vendors.min.css" />
+
+    <!-- Main style  -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -83,8 +82,8 @@
     <!-- End Sections -->
 
     <!-- Script connection -->
-
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <!-- Vendor Scripts [jQuery - Form - Lazy - Bootstrap - Waypoints - IsoTop - Venobox - TypedJS - AOS] -->
+    <script src="assets/js/all.vendors.min.js"></script>
     <script src="js/vendor.min.js"></script>
     <script src="js/script.js"></script>
   </body>
