--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Vendor Styles [Bootstrap - Boxicons - Venobox - AOS] -->
     <link rel="stylesheet" href="assets/css/all.vendors.min.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+
     <!-- Main style  -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -64,9 +66,36 @@
     </div>
     <!-- end Menu Bars -->
     <!-- Start Sections -->
+
+    <!-- Home Section -->
     <section class="home" id="home">
-      <div><h1>Home</h1></div>
+      <div class="container">
+        <h1>Ahmed Roshdy</h1>
+        <p>
+          I'm
+          <span>Web Developer</span>
+        </p>
+        <p>Do what you love and love what you do</p>
+        <div class="social-links">
+          <a href="https://www.linkedin.com/in/ahmed-roshdy-5bb561194/" target="_blank" class="linkedin">
+            <i class="bx bxl-linkedin bx-tada-hover"></i>
+          </a>
+          <a href="https://github.com/Ahmed-Roshdy-1" target="_blank" class="github">
+            <i class="bx bxl-github bx-tada-hover"></i>
+          </a>
+          <a href="https://www.hackerrank.com/ahmedroshdy01029?hr_r=1" target="_blank" class="hackerrank">
+            <i class="fab fa-hackerrank bx-tada-hover"></i>
+          </a>
+          <a href="https://www.youtube.com/channel/UCdjIzOGIRg-er6iN13VaFQg" target="_blank" class="youtube">
+            <i class="bx bxl-youtube bx-tada-hover"></i>
+          </a>
+          <a href="mailto:a.roshdy7777@gmail.com" target="_blank" class="envelope">
+            <i class="bx bxs-envelope bx-tada-hover"></i>
+          </a>
+        </div>
+      </div>
     </section>
+    <!-- End Home Section -->
     <section class="education" id="education">
       <h1>Education</h1>
     </section>
