--- a/index.html
+++ b/index.html
@@ -96,17 +96,29 @@
       </div>
     </section>
     <!-- End Home Section -->
+
+    <!-- Start Education section -->
     <section class="education" id="education">
-      <h1>Education</h1>
+      <!-- Education   -->
+      <div class="section-title">
+        <h1>Education</h1>
+      </div>
     </section>
+    <!-- End Enduction section -->
     <section class="projects" id="projects">
-      <h1>Projects</h1>
+      <div class="section-title">
+        <h1>Projects</h1>
+      </div>
     </section>
     <section class="skills" id="skills">
-      <h1>Skills</h1>
+      <div class="section-title">
+        <h1>Skills</h1>
+      </div>
     </section>
     <section class="contact" id="contact">
-      <h1>Contact</h1>
+      <div class="section-title">
+        <h1>Contact</h1>
+      </div>
     </section>
     <!-- End Sections -->
 
