--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
       <div class="section-title">
         <h1>Education</h1>
       </div>
+      <div class="educationInfo">
+        <h2>Helwan University</h2>
+        <h3>Faculty of Computers and Artificial Intelligence</h3>
+        <p>4<sup>nd</sup> Year in Computer Science Department</p>
+        <i class="bx bxs-graduation"> </i><span>Graduated In: 2022</span>
+      </div>
+      <div class="coursesInfo">
+        <h2>Udemy Courses</h2>
+        <p><i class="bx bx-code-alt"></i> The Complete JavaScript Course 2021: From Zero to Expert</p>
+        <p><i class="bx bx-code-alt"></i> The JavaScript Course 2021: Build Modern JavaScript Projects</p>
+        <p><i class="bx bx-code-alt"></i> The Result-Oriented Web Developer Course - Bootcamp 2021</p>
+      </div>
     </section>
     <!-- End Enduction section -->
     <section class="projects" id="projects">
