--- a/index.html
+++ b/index.html
@@ -121,6 +121,28 @@
       <div class="section-title">
         <h1>Projects</h1>
       </div>
+      <div class="card-conteainer">
+        <div class="card">
+          <div class="front"><img src="Break Out Game.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Break Out Game </h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>Game where you control a paddle with the arrow keys to bounce a ball up to break bricks.</p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Breakout-Game" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Breakout-Game/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="skills" id="skills">
       <div class="section-title">
