--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
       <div class="card-conteainer">
         <div class="card">
-          <div class="front"><img src="Break Out Game.png" sizes="20px" /></div>
+          <div class="front"><img src="Images/Projects/Break Out Game.png" sizes="20px" /></div>
           <div class="back">
             <div class="details">
               <h2>Break Out Game </h2>
