--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
         <h1>Projects</h1>
       </div>
       <div class="card-conteainer">
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Infinty Scroll.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Infinty Scroll</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p
+                >The app fetches photos and can see these photos scrolling forever and the photos fetched from Unsplash
+                API.</p
+              >
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Infinty-Scroll" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Infinty-Scroll/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- End Card -->
+          <!-- Card -->
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Break Out Game.png" sizes="20px" /></div>
           <div class="back">
@@ -142,6 +170,7 @@
             </div>
           </div>
         </div>
+        <!-- End Card -->
       </div>
     </section>
     <section class="skills" id="skills">
