--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
               <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
               <i class="bx bxl-css3" id="css" title="CSS"></i>
               <i class="bx bxl-html5" id="html" title="HTML"></i>
-              <p
-                >The app fetches photos and can see these photos scrolling forever and the photos fetched from Unsplash
-                API.</p
-              >
+              <p>
+                The app fetches photos and can see these photos scrolling forever and the photos fetched from Unsplash
+                API.
+              </p >
               <div class="icons">
                 <a href="https://github.com/Ahmed-Roshdy-1/Infinty-Scroll" target="_blank" title="GitHub Repo">
                   <i class="bx bxl-github bx-tada-hover"></i>
