--- a/index.html
+++ b/index.html
@@ -171,6 +171,109 @@
           </div>
         </div>
         <!-- End Card -->
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Music Player.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Music Player</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                Create music player including spinning image and song detail popup , Loop the same Song , Switch songs
+                and Progress bar.
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Music-Player" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Music-Player/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Card -->
+      </div>
+      <div class="card-conteainer">
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Weather App.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Weather App</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                Weather Application using API that fetching from OpenWeatherMap and has forecasts for today and five day
+                after that.
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Weather-Application" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Weather-Application/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- End Card -->
+          <!-- Card -->
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Frontend Bootstrap.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Frontend Bootstrap</h2>
+              <i class="bx bxl-bootstrap" id="bootstrap" title="Bootstrap"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                Front-end-Bootstrap is a simple website built using HTML, Bootstrab as a side-project to enhance my
+                skill in Bootstrab5.
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Front-end-Bootstrap" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Breakout-Game/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Quote Generator.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Quote Generator</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                this app Using an API to generate a random quote generator with Twitter integration and the quotes
+                fetched from TypeFit API.
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Quote-Generator" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Quote-Generator/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Card -->
       </div>
     </section>
     <section class="skills" id="skills">
