--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <a href="https://github.com/Ahmed-Roshdy-1/Front-end-Bootstrap" target="_blank" title="GitHub Repo">
                   <i class="bx bxl-github bx-tada-hover"></i>
                 </a>
-                <a href="https://ahmed-roshdy-1.github.io/Breakout-Game/" target="_blank" title="Live Demo">
+                <a href="https://ahmed-roshdy-1.github.io/Front-end-Bootstrap/" target="_blank" title="Live Demo">
                   <i class="bx bx-link-external bx-tada-hover"></i>
                 </a>
               </div>
@@ -267,6 +267,82 @@
                   <i class="bx bxl-github bx-tada-hover"></i>
                 </a>
                 <a href="https://ahmed-roshdy-1.github.io/Quote-Generator/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Card -->
+      </div>
+      <div class="card-conteainer">
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Piano.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Weather App</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                it is virtual piano has : a play option(Letter Notes, Keyboard, none),autoplay option song(happy
+                birthday, jingle bells)and faintly play butten
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Piano" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Piano/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- End Card -->
+          <!-- Card -->
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Tour Travel app.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Tour Travel app</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p> Tour Travel App is Complete Responsive Tours and Travel Website and it is fully responsive </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Tours-Travel-app" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Tours-Travel-app/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/15 Puzzel Game.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>15 Puzzel Gamer</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                this app Using an API to generate a random quote generator with Twitter integration and the quotes
+                fetched from TypeFit API.
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/15-Puzzle-Game" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/15-Puzzle-Game/" target="_blank" title="Live Demo">
                   <i class="bx bx-link-external bx-tada-hover"></i>
                 </a>
               </div>
