--- a/index.html
+++ b/index.html
@@ -351,7 +351,86 @@
         </div>
         <!-- End Card -->
       </div>
+      <div class="card-conteainer">
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Joke Teller.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Joke Teller</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                the app that tell random joke about programing and when you press the button (Tell me a joke) , you will
+                hear a random joke.
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Joke-Teller" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Joke-Teller/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- End Card -->
+          <!-- Card -->
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Animated-Website.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Animated Website</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                app that having animation on scroll functionality.I used Tailwind Starter Kit by Creative Tim and make
+                change on it .
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Animated-Website" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Animated-Website/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Card -->
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Picture in Picture.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Picture in Picture</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                Watch videos in a floating window so you can keep an eye on what you’re watching while interacting with
+                other sites.
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/picture-in-picture" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/picture-in-picture/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Card -->
+      </div>
     </section>
+    <!-- End Projects Section -->
     <section class="skills" id="skills">
       <div class="section-title">
         <h1>Skills</h1>
