--- a/index.html
+++ b/index.html
@@ -334,10 +334,7 @@
               <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
               <i class="bx bxl-css3" id="css" title="CSS"></i>
               <i class="bx bxl-html5" id="html" title="HTML"></i>
-              <p>
-                this app Using an API to generate a random quote generator with Twitter integration and the quotes
-                fetched from TypeFit API.
-              </p>
+              <p> Fifteen Puzzles are one of the world's most recognized and popular puzzles. </p>
               <div class="icons">
                 <a href="https://github.com/Ahmed-Roshdy-1/15-Puzzle-Game" target="_blank" title="GitHub Repo">
                   <i class="bx bxl-github bx-tada-hover"></i>
@@ -428,6 +425,47 @@
           </div>
         </div>
         <!-- End Card -->
+      </div>
+      <div class="card-conteainer">
+        <!-- Card -->
+        <div class="card">
+          <div class="front"><img src="Images/Projects/Video Player.png" sizes="20px" /></div>
+          <div class="back">
+            <div class="details">
+              <h2>Video Player</h2>
+              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+              <i class="bx bxl-css3" id="css" title="CSS"></i>
+              <i class="bx bxl-html5" id="html" title="HTML"></i>
+              <p>
+                creating a custom video player, Add play and pause functionality, Progress bar, Volume Controls, Speed
+                Controls, Fullscreen functionality
+              </p>
+              <div class="icons">
+                <a href="https://github.com/Ahmed-Roshdy-1/Video-Player" target="_blank" title="GitHub Repo">
+                  <i class="bx bxl-github bx-tada-hover"></i>
+                </a>
+                <a href="https://ahmed-roshdy-1.github.io/Video-Player/" target="_blank" title="Live Demo">
+                  <i class="bx bx-link-external bx-tada-hover"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- End Card -->
+      </div>
+
+      <div class="project-Reference">
+        <h3
+          >I did code all those Projects to enhance and improve my skill in
+          <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
+          JavaScript,
+          <i class="bx bxl-css3" id="css" title="CSS"></i> CSS and
+          <i class="bx bxl-html5" id="html" title="HTML"></i> HTML
+        </h3>
+        <a href="https://github.com/Ahmed-Roshdy-1?tab=repositories" target="_blank" title="Live Demo">
+          <i class="bx bx-link-external bx-tada-hover"></i>
+          Explore All Projects
+        </a>
       </div>
     </section>
     <!-- End Projects Section -->
