--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="assets/css/all.vendors.min.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"
+    />
 
     <!-- Main style  -->
     <link rel="stylesheet" href="css/style.css" />
@@ -309,7 +313,6 @@
           <div class="back">
             <div class="details">
               <h2>Tour Travel app</h2>
-              <i class="bx bxl-javascript" id="js" title="JavaScrippt"></i>
               <i class="bx bxl-css3" id="css" title="CSS"></i>
               <i class="bx bxl-html5" id="html" title="HTML"></i>
               <p> Tour Travel App is Complete Responsive Tours and Travel Website and it is fully responsive </p>
@@ -469,11 +472,38 @@
       </div>
     </section>
     <!-- End Projects Section -->
+
+    <!-- Skills Section -->
     <section class="skills" id="skills">
       <div class="section-title">
         <h1>Skills</h1>
       </div>
+      <div class="tools">
+        <h2>programing languages and technologies</h2>
+        <i title="C" class="devicon-c-plain colored"></i>
+        <i title="Java" class="devicon-java-plain colored"></i>
+        <i title="Python" class="devicon-python-plain colored"></i>
+        <i class="bx bxl-javascript" id="js-1" title="JavaScrippt"></i>
+        <i class="bx bxl-css3" id="css-1" title="CSS"></i>
+        <i class="bx bxl-html5" id="html-1" title="HTML"></i>
+        <i class="bx bxl-bootstrap" id="bootstrap-1" title="Bootstrap"></i>
+        <i title="Sass" class="devicon-sass-plain colored"></i>
+        <i title="MySQL" class="devicon-mysql-plain colored"></i>
+      </div>
+      <div class="version-control">
+        <h2>Version Control</h2>
+        <i title="Git" class="devicon-git-plain colored"></i>
+        <i title="Github" class="devicon-github-plain colored"></i>
+      </div>
+      <div class="concept">
+        <h2>Concepts</h2>
+        <p><i class="bx bx-code-alt"></i>Data-Structure</p>
+        <p><i class="bx bx-code-alt"></i>Algorithms</p>
+        <p><i class="bx bx-code-alt"></i>Object-Oriented-Programming (OOP)</p>
+      </div>
     </section>
+    <!-- Skills Section -->
+
     <section class="contact" id="contact">
       <div class="section-title">
         <h1>Contact</h1>
