--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
         </p>
         <p>Do what you love and love what you do</p>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/ahmed-roshdy-5bb561194/" target="_blank" class="linkedin">
+          <a href="https://www.linkedin.com/in/ahmed-roshdy-5bb561194/" target="_blank" class="linkedin" title="linkedin">
             <i class="bx bxl-linkedin bx-tada-hover"></i>
           </a>
-          <a href="https://github.com/Ahmed-Roshdy-1" target="_blank" class="github">
+          <a href="https://github.com/Ahmed-Roshdy-1" target="_blank" class="github" title="github">
             <i class="bx bxl-github bx-tada-hover"></i>
           </a>
-          <a href="https://www.hackerrank.com/ahmedroshdy01029?hr_r=1" target="_blank" class="hackerrank">
+          <a href="https://www.hackerrank.com/ahmedroshdy01029?hr_r=1" target="_blank" class="hackerrank" title="hackerrank">
             <i class="fab fa-hackerrank bx-tada-hover"></i>
           </a>
-          <a href="https://www.youtube.com/channel/UCdjIzOGIRg-er6iN13VaFQg" target="_blank" class="youtube">
+          <a href="https://www.youtube.com/channel/UCdjIzOGIRg-er6iN13VaFQg" target="_blank" class= "youtube" title="youtube">
             <i class="bx bxl-youtube bx-tada-hover"></i>
           </a>
-          <a href="mailto:a.roshdy7777@gmail.com" target="_blank" class="envelope">
+          <a href="mailto:a.roshdy7777@gmail.com" target="_blank" class="envelope"  title="Send Me Email">
             <i class="bx bxs-envelope bx-tada-hover"></i>
           </a>
         </div>
@@ -504,11 +504,51 @@
     </section>
     <!-- Skills Section -->
 
+    <!-- Contact Section -->
     <section class="contact" id="contact">
       <div class="section-title">
         <h1>Contact</h1>
       </div>
+      <div class="contactInfo">
+        <div class="card">
+          <i class="bx bxs-location-plus"></i>
+          <h3>Location</h3>
+          <p>Helwan,Cairo</p>
+        </div>
+        <a href="mailto:a.roshdy7777@gmail.com" target="_blank">
+          <div class="card">
+            <i class="bx bxs-envelope"></i>
+            <h3>Email Address</h3>
+            <p>a.roshdy7777@gmail.com</p>
+          </div>
+        </a>
+        <div class="card">
+          <i class="bx bxs-phone-call"></i>
+          <h3>Phone Number</h3>
+          <p>01062240547</p>
+        </div>
+      </div>
+
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/ahmed-roshdy-5bb561194/" target="_blank" class="linkedin" title="Linkedin">
+          <i class="bx bxl-linkedin bx-tada-hover"></i>
+        </a>
+        <a href="https://github.com/Ahmed-Roshdy-1" target="_blank" class="github" title="GitHub">
+          <i class="bx bxl-github bx-tada-hover"></i>
+        </a>
+        <a href="https://www.hackerrank.com/ahmedroshdy01029?hr_r=1" target="_blank" class="hackerrank" title="hackerrank">
+          <i class="fab fa-hackerrank bx-tada-hover"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UCdjIzOGIRg-er6iN13VaFQg" target="_blank" class="youtube" title="youtube">
+          <i class="bx bxl-youtube bx-tada-hover"></i>
+        </a>
+        <a href="mailto:a.roshdy7777@gmail.com" target="_blank" class="envelope" title="Send Me Email">
+          <i class="bx bxs-envelope bx-tada-hover"></i>
+        </a>
+      </div>
+    </div>
     </section>
+    <!-- End contact Section -->
     <!-- End Sections -->
 
     <!-- Script connection -->
