--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="Images/icon.png" />
     <!-- Vendor Styles [Bootstrap - Boxicons - Venobox - AOS] -->
     <link rel="stylesheet" href="assets/css/all.vendors.min.css" />
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link
       rel="stylesheet"
@@ -73,7 +73,7 @@
 
     <!-- Home Section -->
     <section class="home" id="home">
-      <div class="container">
+      <div class="container" data-aos="zoom-in-up" data-aos-delay="400">
         <h1>Ahmed Roshdy</h1>
         <p>
           I'm
@@ -107,13 +107,13 @@
       <div class="section-title">
         <h1>Education</h1>
       </div>
-      <div class="educationInfo">
+      <div class="educationInfo" data-aos="fade-left" data-aos-delay="300">
         <h2>Helwan University</h2>
         <h3>Faculty of Computers and Artificial Intelligence</h3>
         <p>4<sup>nd</sup> Year in Computer Science Department</p>
         <i class="bx bxs-graduation"> </i><span>Graduated In: 2022</span>
       </div>
-      <div class="coursesInfo">
+      <div class="coursesInfo" data-aos="fade-up-left" data-aos-delay="400">
         <h2>Udemy Courses</h2>
         <p><i class="bx bx-code-alt"></i> The Complete JavaScript Course 2021: From Zero to Expert</p>
         <p><i class="bx bx-code-alt"></i> The JavaScript Course 2021: Build Modern JavaScript Projects</p>
@@ -125,7 +125,7 @@
       <div class="section-title">
         <h1>Projects</h1>
       </div>
-      <div class="card-conteainer">
+      <div class="card-conteainer" data-aos="zoom-in-up">
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Infinty Scroll.png" sizes="20px" /></div>
@@ -201,7 +201,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer">
+      <div class="card-conteainer" data-aos="zoom-in-up">
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Weather App.png" sizes="20px" /></div>
@@ -279,7 +279,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer">
+      <div class="card-conteainer" data-aos="zoom-in-up">
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Piano.png" sizes="20px" /></div>
@@ -351,7 +351,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer">
+      <div class="card-conteainer" data-aos="zoom-in-up">
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Joke Teller.png" sizes="20px" /></div>
@@ -429,7 +429,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer">
+      <div class="card-conteainer" data-aos="zoom-in-up">
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Video Player.png" sizes="20px" /></div>
@@ -563,6 +563,7 @@
    
     <!-- Script connection -->
     <!-- Vendor Scripts [jQuery - Form - Lazy - Bootstrap - Waypoints - IsoTop - Venobox - TypedJS - AOS] -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/all.vendors.min.js"></script>
     <script src="js/vendor.min.js"></script>
     <script src="js/script.js"></script>
