--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+    content="I'm Ahmed Roshdy. Frontend Developer. I enjoy coding web pages with creative ideas and beautiful designs." />
+    <meta name="keywords"
+     content="Ahmed Roshdy Ahmed-Roshdy-1,Ahmed Roshdy Website, Ahmed Roshdy Portfolio,Ahmed-Roshdy, ahmed-roshdy Website, Roshdy Portfolio, github, ahmed-roshdy, ahmed-roshdy-1.github.io, github ahmed-roshdy-1"/>
+    <meta name="author" content="Ahmed Roshdy, Ahmed-Roshdy-1, Ahmed-Roshdy-1" />
+
     <title> Ahmed Roshdy </title>
     <link rel="icon" href="Images/icon.png" />
     <!-- Vendor Styles [Bootstrap - Boxicons - Venobox - AOS] -->
