--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="Images/icon.png" />
     <!-- Vendor Styles [Bootstrap - Boxicons - Venobox - AOS] -->
     <link rel="stylesheet" href="assets/css/all.vendors.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link
       rel="stylesheet"
@@ -131,7 +131,7 @@
       <div class="section-title">
         <h1>Projects</h1>
       </div>
-      <div class="card-conteainer" data-aos="zoom-in-up">
+      <div class="card-conteainer"  data-aos="zoom-in-up" data-aos-delay="200">
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Infinty Scroll.png" sizes="20px" /></div>
@@ -207,7 +207,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer" data-aos="zoom-in-up">
+      <div class="card-conteainer" >
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Weather App.png" sizes="20px" /></div>
@@ -285,7 +285,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer" data-aos="zoom-in-up">
+      <div class="card-conteainer" >
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Piano.png" sizes="20px" /></div>
@@ -357,7 +357,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer" data-aos="zoom-in-up">
+      <div class="card-conteainer" >
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Joke Teller.png" sizes="20px" /></div>
@@ -435,7 +435,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer" data-aos="zoom-in-up">
+      <div class="card-conteainer" data-aos="zoom-in-up" data-aos-delay="200" >
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Video Player.png" sizes="20px" /></div>
@@ -569,7 +569,6 @@
    
     <!-- Script connection -->
     <!-- Vendor Scripts [jQuery - Form - Lazy - Bootstrap - Waypoints - IsoTop - Venobox - TypedJS - AOS] -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/all.vendors.min.js"></script>
     <script src="js/vendor.min.js"></script>
     <script src="js/script.js"></script>
