--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         </div>
         <!-- End Card -->
       </div>
-      <div class="card-conteainer" data-aos="zoom-in-up" data-aos-delay="200" >
+      <div class="card-conteainer">
         <!-- Card -->
         <div class="card">
           <div class="front"><img src="Images/Projects/Video Player.png" sizes="20px" /></div>
