--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           I'm
           <span>Web Developer</span>
         </p>
-        <p>programming is the art of transforming ideas into something that facilitates human life</p>
+        <p>programming is the art of transforming <br>ideas into something that facilitates human life</p>
         <div class="social-links">
           <a href="https://www.linkedin.com/in/ahmed-roshdy-5bb561194/" target="_blank" class="linkedin" title="linkedin">
             <i class="bx bxl-linkedin bx-tada-hover"></i>
